fix header on tablet

--- a/flickity.css
+++ b/flickity.css
@@ -44,7 +44,7 @@ http://flickity.metafizzy.co
 
 /* ---- previous/next buttons ---- */
 
-/*.flickity-prev-next-button {
+.flickity-prev-next-button {
   position: absolute;
   top: 50%;
   width: 44px;
@@ -55,10 +55,10 @@ http://flickity.metafizzy.co
   background: hsla(0, 0%, 100%, 0.75);
   cursor: pointer;*/
   /* vertically center */
-  /*-webkit-transform: translateY(-50%);
-          transform: translateY(-50%);*/
-/*}*/
-/*
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
 .flickity-prev-next-button:hover { background: white; }
 
 .flickity-prev-next-button:focus {
@@ -68,12 +68,12 @@ http://flickity.metafizzy.co
 
 .flickity-prev-next-button:active {
   opacity: 0.6;
-}*/
-/*
+}
+
 .flickity-prev-next-button.previous { left: 10px; }
-.flickity-prev-next-button.next { right: 10px; }*/
+.flickity-prev-next-button.next { right: 10px; }
 /* right to left */
-/*.flickity-rtl .flickity-prev-next-button.previous {
+.flickity-rtl .flickity-prev-next-button.previous {
   left: auto;
   right: 10px;
 }
@@ -97,7 +97,7 @@ http://flickity.metafizzy.co
 
 .flickity-prev-next-button .arrow {
   fill: #333;
-}*/
+}
 
 /* ---- page dots ---- */
 
